test/types/records/bad-change-type/init-new-arg-changes-type2.good
init-new-arg-changes-type2.chpl:12: error: named argument 't' provided twice
